--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,35 +1,26 @@
 <!DOCTYPE html>
-<html>
-
-  {% include head.html %}
- <body>
-<div id="wrapper">
- {% include header.html %}
- <div class="container">
-	<div class="row">
-        <div class="box">
-                <div class="col-lg-12">
-                    <div class="intro-text text-center">
-					<h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
-					<p class="post-meta">{% if page.author %} <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">by {{ page.author }}</span></span>{% endif %} <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished"><i class="fa fa-calendar"></i> {{ page.date | date: "%b %-d, %Y" }}</time></p>
-					</div>
-					 {{ content }}
-					 <span class='st_sharethis_large' displayText='ShareThis'></span>
-						<span class='st_facebook_large' displayText='Facebook'></span>
-						<span class='st_twitter_large' displayText='Tweet'></span>
-						<span class='st_linkedin_large' displayText='LinkedIn'></span>
-						<span class='st_pinterest_large' displayText='Pinterest'></span>
-						<span class='st_email_large' displayText='Email'></span>
+<html lang="pt-br">
+    {% include head.html %}
+    <body>
+        {% include svg-icons.html %}
+        {% include header-post.html %}
+        {% include tree-posts.html %}
+        <section class="post" itemscope itemtype="http://schema.org/BlogPosting">
+            {% if page.date %}
+                <div class="time">
+                    <time itemprop="datePublished" datetime="{{ page.date }}">{{ page.date | date_to_string }}</time>
                 </div>
-                Category {{ page.categories | join: ', ' }}
-        </div>
-	</div>
-  
-  {% include comment.html %}
-</div>
-<hr>
- {% include footer.html %}
-</div>
-  </body>
+            {% endif %}
+            <h1 class="post-title" itemprop="name">{{ page.title }}</h1>
 
+            <article role="article" id="scroll" class="post-content" itemprop="articleBody">
+                {{ content }}
+            </article>
+
+            {% include share.html %}
+            {% include comments.html %}
+            {% include footer.html %}
+            {% include scripts.html %}
+        </section>
+    </body>
 </html>
